--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/StudentDatabase
+spring.datasource.url=jdbc:mysql://localhost:3306/StudentDatabase?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Pass1234
+#spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-bean-definition-overriding=true
