--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,10 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/newstudent
+spring.datasource.url=jdbc:mysql://localhost:3306/StudentDatabase?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.database.password=pass1234
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-
-
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-bean-definition-overriding=true
